fixed ioutil problems with Windows paths